a11y: contrast fix + header order

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -99,6 +99,8 @@ h6 {
 
 b, strong {
   font-weight: 700;
+  font-family: Lato,Helvetica,sans-serif;
+  font-size: 1.8rem;
 }
 
 .highlight > div,
